# GeoLibs-glutemulo

./: .dockerignore  .drone.yml  .env.example  .gitignore  Dockerfile  Readme.md  app.py  docker-compose.yml  example_multiprocessing.py  example_redis.py  kafka_producer.py  producer.py  pyproject.toml  test
deploy/k8s/kafka/: rbac-admin.yaml
deploy/k8s/kafka/scale-1/: README.md  kustomization.yaml
deploy/k8s/kafka/scale-1/example/: kafka-url-overrides.json  kustom_kafka.dev.yaml  kustomization.yaml
deploy/k8s/kafka/scale-2/: kafka-topics-override.json  kustomization.yaml
deploy/k8s/kafka/scale-2/_base/: pzoo-resources-override.json
deploy/k8s/kafka/scale-3/: kustomization.yaml
deploy/k8s/kafka/scale-3/_base/: kafka-resources-override.json
examples/: example_multiprocessing.py  example_redis.py  flask_app.py
glutemulo/: app.py  config.py  gluto.py  logger.py
glutemulo/backend/: __init__.py  big_query.py  carto.py  postgres.py  sql.py
glutemulo/kafka/: consumer.py  producer.py
glutemulo/tasks/: celery_consumer.py
src/: avro_utils.py  consumer.py  kafka_consumer.py
tests/: test_glutemulo.py
