[tool.poetry]
name = "glutemulo"
version = "0.1.0"
description = "A geo-data ingestor"
authors = ["Pablo Caro Revuelta <pablo.caro@geographica.com>"]

[tool.poetry.dependencies]
python = "^3.6"
kafka-python = "^1.4"
redis = "^3.2"
environs = "^4.1"
fastavro = "^0.21.23"
carto = {version = "^1.4",optional = true}
psycopg2-binary = {version = "^2.8",optional = true}

[tool.poetry.dev-dependencies]
flask = "^1.0"
pytest = "^4.4"
pytest-mock = "^1.10"

[tool.poetry.extras]
carto = ["carto"]
postgres = ["psycopg2-binary"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
